refactor(core): adopt API-level Java 25 idioms
Behavior-preserving: Math.clamp (4 sites replacing Math.max(LO, Math.min(HI,
x)) with literal-bounded constants — TheoreticalPortfolioService,
SnapshotProjectionService x2, CombinedPortfolioHistoryService) and
List.getFirst()/getLast() (5 sites where non-emptiness was already guaranteed
by prior isEmpty()/size() guards — SnapshotProjectionService,
TheoreticalPortfolioService, CombinedPortfolioHistoryService,
StockSplitService, PropertyValuationSyncService). No new syntax
(Checkstyle/PMD parser guardrail). Existing tests and all five gates green.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013zqLcvSyE7cr1g5Z5m8zio